# RenderDocMCP

./: .mcp.json  README.md  REFACTOR_SUMMARY.md  RENDERDOC_1_17_SUPPORT.md  pyproject.toml
mcp_server/: server.py
renderdoc_extension/: __init__.py  extension.json  renderdoc_compat.py  renderdoc_facade.py  request_handler.py  socket_server.py  test_extension_load.py
renderdoc_extension/services/: action_service.py  capture_manager.py  pipeline_service.py  resource_service.py  search_service.py
renderdoc_extension/utils/: helpers.py  parsers.py  serializers.py
src/renderdoc_mcp/: __init__.py  __main__.py  backend.py  bootstrap.py  errors.py  install_cli.py  paths.py  protocol.py  server.py
src/renderdoc_mcp/application/: __init__.py  app.py  command_specs.py  context.py  registry.py  response.py
src/renderdoc_mcp/application/handlers/: __init__.py  actions.py  captures.py  resources.py
src/renderdoc_mcp/application/services/: capture_sessions.py
src/renderdoc_mcp/bridge/: __init__.py  file_ipc_client.py
